Fixed layout issues of the radial wheel and tooltip placement issue

--- a/src/jsx/components/debt_wheel/DebtWheel.css
+++ b/src/jsx/components/debt_wheel/DebtWheel.css
@@ -79,6 +79,7 @@
         }
         svg {
           height: 100%;
+          overflow: visible;
         }
       }
       .panel-wrapper {
